Created attachment 167420 [details] odt showing the problem This is a break out of part of bug 93675; the orange arrows on the right side. Open the fodt, save as docx, reload. 1) On current released LO writing a DOCX we don't see the arrows; with https://gerrit.libreoffice.org/c/core/+/106212 we get something _vaguely_ right. 2) Loading the produced docx in both MSO (thanks vmiklos for checking) has the arrows at the top of the page and vertically too large to fit on the page. The text is correct albeit offset. 3) Loading the same docx in LO has the arrows in about the right place but still way too large. The text is horizontal rather than rotated. 4) Note LO is writing VML here rather than DrawingML
(4) is from 3c0a7cf4f67720f2cca2c4eb543f838d5b644e7f / fdo#75254 that explicitly disabled DML for polypoly.
On 10e0a9441609 the size of the arrows in (3) is fixed. onedrive is a bit upset with the current output; it's little preview thumbnail correctly shows the orange arrows; but opening it fully shows the text and some red crosses instead of the orange arrows. I'd be interested if someone could try it on a local copy of MSO.
Hello Dave, Thanks for fixing this issue. Unittest added in https://gerrit.libreoffice.org/c/core/+/106424
Xisco Fauli committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/da2206c29f0d11914e68332691ab7699b1fd9b45 tdf#138374: sw_ooxmlexport15: Add unittest It will be available in 7.2.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
If this bug is fixed, it should be marked Resolved. Xisco, please make comparison of ODT and DOCX both in LO and MSO. (I can't).
Also, for any filesave DOCX bug, filesave DOC should be tested (to be sure it's OK, a duplicate, a new bug, if not resolved in the same one).
Created attachment 167613 [details] ODT vs DOCX in LibreOffice 7.1 vs MSO 2010 How it looks after the fix. Keep in mind this ticket is about the orange arrows
We have a unittest for it. Closing as VERIFIED FIXED @Dave, thanks for fixing this issue!
Thanks Xisco! FIrst thanks for the test, also thanks for the test with MS Word. Interestingly before my 2nd patch, vmiklos had done a MS Word test and had seen the text; but for me on OneDrive it was very very confused by it. So it suggests that the text is very broken, so it's not just a problem with the odt loading of the text. I was going to keep this bug open until I fixed the text as well; but I'll fight it separately; suggestions welcome.
Observation: Currently the rotated text ends up as: mc:Alternate->mc:Choice wps->w:drawing->wp:anchor-> a:graphic (drawingml/2006/main)->a:graphicData (word/2010/wordprocessingShape) -> wps:wsp->wps:spPr->a:xfrm wps:txbx w:txbxContent->w:p->w:r->w:t but I notice oox/source/drawingml/shapecontext.cxx has an entry for XML_txXfrm for rotation; perhaps something would prefer that?